[package]
name = "zerosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
nix = "0.27.1"
rustyline = "12.0.0"
signal-hook = "0.3.17"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

